# LiveFakeTauri2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  SPEC.md  deny.toml
.claude/: settings.local.json
.claude/agents/: release.md  reviewer.md
.claude/rules/: react.md  rust.md
.claude/skills/ci/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/landing/: SKILL.md
.claude/skills/lint/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: index.html  package.json
crates/core-auth/: Cargo.toml
crates/core-fetch/: Cargo.toml
crates/core-parse/: Cargo.toml
crates/core-proxy/: Cargo.toml
crates/core-store/: Cargo.toml
crates/core-tts/: Cargo.toml
crates/core-tts/src/: lib.rs
docs/: 5ch_browser_spec.md  DEPLOYMENT_RUNBOOK.md  DEVELOPER_GUIDE.md  NEXT_SESSION_HANDOVER.md  NEXT_SESSION_PROMPT.md  POST_FLOW_PROBE_2026-03-19.json  PROGRESS_TRACKER.md  START_HERE.md  USER_MANUAL.md
instructions/: phase1-basics.md  phase2-multisite.md  phase3-live-features.md  phase4-highlight-contextmenu.md  phase5-infra.md
scripts/: build_linux_aarch64_release.sh  build_linux_release.sh  build_mac_release.sh  generate_latest_json.py  prepare_release_metadata.py  probe_post_flow.py  release.sh  run_post_flow_probe.ps1  validate_latest_json.py
(+16 files in other folders)
