[package]
name = "core-tts"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Speech",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation"
]}
