[package]
name = "livefake"
version = "0.0.77"
license = "MIT"
description = "実況向け掲示板ブラウザ"
homepage = ""
repository = ""
edition = "2021"

[lib]
name = "livefake_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
core-fetch = { path = "../../../crates/core-fetch" }
core-proxy = { path = "../../../crates/core-proxy" }
core-store = { path = "../../../crates/core-store" }
core-tts = { path = "../../../crates/core-tts" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
